--- a/src/App.css
+++ b/src/App.css
@@ -1,19 +1,43 @@
-/* * {
-  font-family: Helvetica;
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-.resetMargin {
-  margin: 0 !important;
-}
-
-/* .App {
+.App {
   display: flex;
   flex-direction: column;
-  width: 100%;
-  padding: 20px 24px 0px 24px;
-  justify-content: center;
-  box-sizing: border-box;
-} */
+  height: 100%;
+  position: relative;
+}
+
+.PostsContainer {
+  display: flex;
+
+  flex-wrap: wrap;
+  height: 100%;
+}
+
+.flex {
+  display: flex;
+}
+.Card {
+  width: 250px;
+  margin: 5px;
+}
+
+html,
+body,
+#app {
+  height: 100%;
+}
+
+.Form {
+  margin: 10px;
+  display: flex;
+}
+
+.addButton {
+  position: absolute;
+  left: 90%;
+  top: 100%;
+  border-radius: 50% !important;
+}
+
+.main {
+  margin-top: 25px;
+}
