refactored old Redux with Redux-Toolkit, TableFilter fixed

--- a/src/components/ErrorBanner/ErrorBanner.css
+++ b/src/components/ErrorBanner/ErrorBanner.css
@@ -1,4 +1,4 @@
-.ErrorBanner {
+/* .ErrorBanner {
   position: fixed;
   bottom: 0;
   width: 100%;
@@ -30,4 +30,4 @@
 .ErrorBanner__close {
   border-radius: 50%;
   aspect-ratio: 1 / 1;
-}
+} */
